--- a/Home.html
+++ b/Home.html
@@ -27,7 +27,16 @@
             <span><a href="">政企服务</a></span>
             <span> | </span>
             <span><a href="">Select Region</a></span>
+            <div class="TopMenuRight">
+                <span><a href="">登录</a></span>
+                <span> | </span>
+                <span><a href="">注册</a></span>
+                <span> | </span>
+                <span><a href="">消息通知</a></span>
+                <div class="cart">购物车</div>
+            </div>
         </div>
+
     </div>
 </div>
 
