--- a/Home.html
+++ b/Home.html
@@ -33,12 +33,42 @@
                 <span><a href="">注册</a></span>
                 <span> | </span>
                 <span><a href="">消息通知</a></span>
-                <div class="cart">购物车</div>
+                <div class="cart">
+                    <img src="img/cartn.png" alt="">
+                    购物车
+                    <div class="cartMain">
+                        购物车中还没有商品，赶紧选购吧！
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
 
+    <div class="logoMenu">
+        <div class="logoMenuLeft">
+            <img src="img/logo.png" alt="">
+        </div>
+        <div class="logoMenuCenter">
+            <ul>
+                <li>小米手机</li>
+                <li>红米</li>
+                <li>电视</li>
+                <li>笔记本</li>
+                <li>盒子</li>
+                <li>新品</li>
+                <li>路由器</li>
+                <li>智能硬件</li>
+                <li>服务</li>
+                <li>社区</li>
+            </ul>
+        </div>
+        <div class="logoMenuRight">
+
+        </div>
     </div>
 </div>
 
+<script src="js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
