顶部logo部分完成

--- a/Home.html
+++ b/Home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>小米</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
 
@@ -50,19 +52,21 @@
         </div>
         <div class="logoMenuCenter">
             <ul>
-                <li>小米手机</li>
-                <li>红米</li>
-                <li>电视</li>
-                <li>笔记本</li>
-                <li>盒子</li>
-                <li>新品</li>
-                <li>路由器</li>
-                <li>智能硬件</li>
-                <li>服务</li>
-                <li>社区</li>
+                <li style="width: 70px;"><a href="">小米手机</a></li>
+                <li><a href="">红米</a></li>
+                <li><a href="">电视</a></li>
+                <li><a href="">笔记本</a></li>
+                <li><a href="">盒子</a></li>
+                <li><a href="">新品</a></li>
+                <li><a href="">路由器</a></li>
+                <li style="width: 70px;"><a href="">智能硬件</a></li>
+                <li><a href="">服务</a></li>
+                <li><a href="">社区</a></li>
             </ul>
         </div>
         <div class="logoMenuRight">
+            <button type="submit" class="searchSub"><span class="glyphicon glyphicon-search"></span></button>
+            <input type="text" class="search">
 
         </div>
     </div>
