顶部logo部分完善

--- a/Home.html
+++ b/Home.html
@@ -65,8 +65,10 @@
             </ul>
         </div>
         <div class="logoMenuRight">
-            <button type="submit" class="searchSub"><span class="glyphicon glyphicon-search"></span></button>
-            <input type="text" class="search">
+            <label for="src1">
+                <button type="submit" class="searchSub"><span class="glyphicon glyphicon-search"></span></button>
+                <input type="text" class="search" id="src1">
+            </label>
 
         </div>
     </div>
