顶部导航栏完善

--- a/Home.html
+++ b/Home.html
@@ -52,14 +52,14 @@
         </div>
         <div class="logoMenuCenter">
             <ul>
-                <li style="width: 70px;"><a href="">小米手机</a></li>
+                <li><a href="">小米手机</a></li>
                 <li><a href="">红米</a></li>
                 <li><a href="">电视</a></li>
                 <li><a href="">笔记本</a></li>
                 <li><a href="">盒子</a></li>
                 <li><a href="">新品</a></li>
                 <li><a href="">路由器</a></li>
-                <li style="width: 70px;"><a href="">智能硬件</a></li>
+                <li><a href="">智能硬件</a></li>
                 <li><a href="">服务</a></li>
                 <li><a href="">社区</a></li>
             </ul>
