--- a/Home.html
+++ b/Home.html
@@ -72,6 +72,23 @@
 
         </div>
     </div>
+
+    <div class="MainMenu">
+        <div class="slider">
+            <ul>
+                <li><a href="#"><img src="img/homelist1.jpg" alt=""></a></li>
+                <li><a href="#"><img src="img/homelist2.jpg" alt=""></a></li>
+                <li><a href="#"><img src="img/homelist3.jpg" alt=""></a></li>
+                <li><a href="#"><img src="img/homelist4.jpg" alt=""></a></li>
+                <li><a href="#"><img src="img/homelist5.jpg" alt=""></a></li>
+            </ul>
+            <!--箭头-->
+            <div class="arrow">
+                <span class="arrow-left" >&lt;</span>
+                <span class="arrow-right">&gt;</span>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="js/jquery-3.3.1.min.js"></script>
