左侧菜单栏

--- a/Home.html
+++ b/Home.html
@@ -74,6 +74,40 @@
     </div>
 
     <div class="MainMenu">
+        <div class="MainMenuRight">
+            <ul>
+                <li>手机 电话卡
+                    <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </li>
+                <li>电视 盒子
+                    <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </li>
+                <li>笔记本 平板
+                    <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </li>
+                <li>家电 插线板
+                    <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </li>
+                <li>出行 穿戴
+                    <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </li>
+                <li>智能 路由器
+                    <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </li>
+                <li>电源 配件
+                    <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </li>
+                <li>个护 儿童
+                    <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </li>
+                <li>耳机 音响
+                    <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </li>
+                <li>生活 箱包
+                    <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </li>
+            </ul>
+        </div>
         <div class="slider">
             <ul>
                 <li><a href="#"><img src="img/homelist1.jpg" alt=""></a></li>
@@ -84,7 +118,7 @@
             </ul>
             <!--箭头-->
             <div class="arrow">
-                <span class="arrow-left" >&lt;</span>
+                <span class="arrow-left">&lt;</span>
                 <span class="arrow-right">&gt;</span>
             </div>
         </div>
