--- a/Home.html
+++ b/Home.html
@@ -78,33 +78,63 @@
             <ul>
                 <li>手机 电话卡
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    <div id="0" class="MenuCenter">
+                        小米8小米8小米8小米8小米8
+                    </div>
                 </li>
                 <li>电视 盒子
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    <div id="1" class="MenuCenter">
+                        小米电视电视电视
+                    </div>
                 </li>
                 <li>笔记本 平板
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    <div id="2" class="MenuCenter">
+                        小米电脑电脑都能
+                    </div>
                 </li>
                 <li>家电 插线板
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    <div id="3" class="MenuCenter">
+                        小米家电啊
+                    </div>
                 </li>
                 <li>出行 穿戴
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    <div id="4" class="MenuCenter">
+                        小米手环！
+                    </div>
                 </li>
                 <li>智能 路由器
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    <div id="5" class="MenuCenter">
+                        小米路由器！
+                    </div>
                 </li>
                 <li>电源 配件
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    <div id="6" class="MenuCenter">
+                        小米插排！
+                    </div>
                 </li>
                 <li>个护 儿童
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    <div id="7" class="MenuCenter">
+                        小米手表
+                    </div>
                 </li>
                 <li>耳机 音响
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    <div id="8" class="MenuCenter">
+                        小米蓝牙音箱
+                    </div>
                 </li>
                 <li>生活 箱包
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    <div id="9" class="MenuCenter">
+                        小米拉杆箱
+                    </div>
                 </li>
             </ul>
         </div>
