--- a/Home.html
+++ b/Home.html
@@ -152,6 +152,14 @@
                 <span class="arrow-right">&gt;</span>
             </div>
         </div>
+
+    </div>
+
+    <div class="TopList">
+        <div class="TopListLeft"></div>
+        <div class="TopListColumn"><img src="img/toplist1.jpg" alt=""></div>
+        <div class="TopListColumn"><img src="img/toplist2.jpg" alt=""></div>
+        <div class="TopListColumn"><img src="img/toplist3.jpg" alt=""></div>
     </div>
 </div>
 
