商品列表修改

--- a/Home.html
+++ b/Home.html
@@ -156,7 +156,46 @@
     </div>
 
     <div class="TopList">
-        <div class="TopListLeft"></div>
+        <div class="TopListLeft">
+            <ul>
+                <li style="border-right: 1px solid #696969;border-bottom: 1px solid #696969;">
+                    <a href="">
+                    <img src="img/icon/phone.png" alt="">
+                    <p>选购手机</p>
+                    </a>
+                </li>
+                <li style="border-right: 1px solid #696969;border-bottom: 1px solid #696969;">
+                    <a href="">
+                        <img src="img/icon/gift.png" alt="">
+                    <p>企业团购</p>
+                    </a>
+                </li>
+                <li style=" border-bottom: 1px solid #696969;">
+                    <a href="">
+                        <img src="img/icon/F.png" alt="">
+                        <p>F码通道</p>
+                    </a>
+                </li>
+                <li style="border-right: 1px solid #696969; ">
+                    <a href="">
+                        <img src="img/icon/sim.png" alt="">
+                        <p>不限流量</p>
+                    </a>
+                </li>
+                <li style="border-right: 1px solid #696969; ">
+                    <a href="">
+                        <img src="img/icon/recycle.png" alt="">
+                        <p>以旧换新</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="img/icon/charge.png" alt="">
+                        <p>话费充值</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
         <div class="TopListColumn"><img src="img/toplist1.jpg" alt=""></div>
         <div class="TopListColumn"><img src="img/toplist2.jpg" alt=""></div>
         <div class="TopListColumn"><img src="img/toplist3.jpg" alt=""></div>
