--- a/Home.html
+++ b/Home.html
@@ -200,6 +200,12 @@
         <div class="TopListColumn"><img src="img/toplist2.jpg" alt=""></div>
         <div class="TopListColumn"><img src="img/toplist3.jpg" alt=""></div>
     </div>
+
+    <div class="banner">
+        <img src="img/banner/bannerPic1.jpg" alt="">
+    </div>
+
+
 </div>
 
 <script src="js/jquery-3.3.1.min.js"></script>
