--- a/Home.html
+++ b/Home.html
@@ -205,7 +205,32 @@
         <img src="img/banner/bannerPic1.jpg" alt="">
     </div>
 
+</div>
+<div class="mainContain">
+    <div class="phone">
+        <div class="phoneTop">
+            <span>手机</span>
+            <span style="float: right;">查看全部</span>
+        </div>
+        <div class="phoneContain">
+            <div class="phoneLeft">
+                <img src="img/phone/phoneleft.jpg" alt="">
+            </div>
+            <div class="phoneMain">
+                <ul>
+                    <a href=""><li><img src="img/phone/phone1.jpg" alt=""></li></a>
+                    <a href=""><li><img src="img/phone/phone2.jpg" alt=""></li></a>
+                    <a href=""><li><img src="img/phone/phone3.jpg" alt=""></li></a>
+                    <a href=""><li><img src="img/phone/phone4.jpg" alt=""></li></a>
+                    <a href=""><li><img src="img/phone/phone5.jpg" alt=""></li></a>
+                    <a href=""><li><img src="img/phone/phone6.jpg" alt=""></li></a>
+                    <a href=""><li><img src="img/phone/phone7.jpg" alt=""></li></a>
+                    <a href=""><li><img src="img/phone/phone8.jpg" alt=""></li></a>
+                </ul>
+            </div>
+        </div>
 
+    </div>
 </div>
 
 <script src="js/jquery-3.3.1.min.js"></script>
