--- a/Home.html
+++ b/Home.html
@@ -285,6 +285,43 @@
                 </ul>
             </div>
         </div>
+    </div>
+
+    <div class="jiadian">
+        <div class="banner2">
+            <img src="img/jiadian/banner2.jpg" alt="">
+        </div>
+        <div class="jiadianBody">
+            <div class="jiadianTop">
+                <span class="TopTxt1">家电</span>
+                <span class="TopTxt2">
+                    <span id="jd11"><a href="">热门</a></span>
+                    <span id="jd22"><a href="">电视影音</a></span>
+                    <span id="jd33"><a href="">电脑</a></span>
+                    <span id="jd44"><a href="">家居</a></span>
+                </span>
+            </div>
+            <div class="jiadianLeft">
+                <div class="jiadianLeftimg">
+                    <img src="img/jiadian/jiadianleft1.jpg" alt="">
+                </div>
+                <div class="jiadianLeftimg" style="margin-top: 14px;">
+                    <img src="img/jiadian/jiadianleft2.jpg" alt="">
+                </div>
+            </div>
+            <div class="jiadianMain" id="jd1" style="display: block;">
+                热门
+            </div>
+            <div class="jiadianMain" id="jd2" style="display: none;">
+                电视影音
+            </div>
+            <div class="jiadianMain" id="jd3" style="display: none;">
+                电脑
+            </div>
+            <div class="jiadianMain" id="jd4" style="display: none;">
+                家居
+            </div>
+        </div>
 
     </div>
 </div>
