家电模块修改2

--- a/Home.html
+++ b/Home.html
@@ -359,7 +359,7 @@
                                     <h3>浏览更多</h3>
                                     <h4>热门</h4>
                                     <div>
-                                        <img src="" alt="">
+                                        <i class="fa fa-angle-right icon1" aria-hidden="true"></i>
                                     </div>
                                 </li>
                             </a>
