--- a/Home.html
+++ b/Home.html
@@ -311,38 +311,45 @@
             </div>
             <div class="jiadianMain" id="jd1" style="display: block;">
                 <ul>
-                    <a href=""><li><img src="img/phone/phone1.jpg" alt="">
+                    <li>
+                        <a href=""><img src="img/phone/phone1.jpg" alt="">
                         <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                         <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
                         </p>
-                    </li></a>
-                    <a href=""><li><img src="img/phone/phone2.jpg" alt="">
+                        <div class="hiddenDiv" >
+
+                        </div></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/phone/phone2.jpg" alt="">
                         <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                         <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p>
-                    </li></a>
-                    <a href=""><li><img src="img/phone/phone3.jpg" alt="">
+                        </p></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/phone/phone3.jpg" alt="">
                         <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                         <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p>
-                    </li></a>
-                    <a href=""><li><img src="img/phone/phone4.jpg" alt="">
+                        </p></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/phone/phone4.jpg" alt="">
                         <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                         <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p>
-                    </li></a>
+                        </p></a>
+                    </li>
                     <a href="">
                         <div class="EndList">
                             <a href="">
@@ -365,31 +372,34 @@
                             </a>
                         </div>
                     </a>
-                    <a href=""><li><img src="img/phone/phone6.jpg" alt="">
+                    <li>
+                        <a href=""><img src="img/phone/phone6.jpg" alt="">
                         <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                         <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p>
-                    </li></a>
-                    <a href=""><li><img src="img/phone/phone7.jpg" alt="">
+                        </p></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/phone/phone7.jpg" alt="">
                         <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                         <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p>
-                    </li></a>
-                    <a href="">
-                        <li><img src="img/phone/phone8.jpg" alt="">
+                        </p></a>
+                    </li>
+
+                    <li>
+                            <a href=""><img src="img/phone/phone8.jpg" alt="">
                         <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                         <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p>
-                    </li></a>
+                        </p></a>
+                    </li>
                 </ul>
             </div>
             <div class="jiadianMain" id="jd2" style="display: none;">
