家电模块添加hover

--- a/Home.html
+++ b/Home.html
@@ -319,9 +319,11 @@
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
                         </p>
-                        <div class="hiddenDiv" >
-
-                        </div></a>
+                        <div class="hiddenDiv" id="10" >
+                            <p style="padding-top: 10px;">不错非常棒！</p>
+                            <p>来自海海的评论</p>
+                        </div>
+                        </a>
                     </li>
                     <li>
                         <a href=""><img src="img/phone/phone2.jpg" alt="">
@@ -330,7 +332,12 @@
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p></a>
+                        </p>
+                            <div class="hiddenDiv" id="11" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
                     </li>
                     <li>
                         <a href=""><img src="img/phone/phone3.jpg" alt="">
@@ -339,7 +346,12 @@
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p></a>
+                        </p>
+                            <div class="hiddenDiv" id="12" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
                     </li>
                     <li>
                         <a href=""><img src="img/phone/phone4.jpg" alt="">
@@ -348,7 +360,12 @@
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p></a>
+                        </p>
+                            <div class="hiddenDiv" id="13" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
                     </li>
                     <a href="">
                         <div class="EndList">
@@ -379,7 +396,12 @@
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p></a>
+                        </p>
+                            <div class="hiddenDiv" id="16" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
                     </li>
                     <li>
                         <a href=""><img src="img/phone/phone7.jpg" alt="">
@@ -388,7 +410,12 @@
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p></a>
+                        </p>
+                            <div class="hiddenDiv" id="17" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li>
@@ -398,7 +425,12 @@
                         <p class="Phonetxt3">
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
-                        </p></a>
+                        </p>
+                                <div class="hiddenDiv" id="18" >
+                                    <p style="padding-top: 10px;">不错非常棒！</p>
+                                    <p>来自海海的评论</p>
+                                </div>
+                        </a>
                     </li>
                 </ul>
             </div>
