--- a/Home.html
+++ b/Home.html
@@ -435,7 +435,129 @@
                 </ul>
             </div>
             <div class="jiadianMain" id="jd2" style="display: none;">
-                电视影音
+                <ul>
+                    <li>
+                        <a href=""><img src="img/phone/phone1.jpg" alt="">
+                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                            <p class="Phonetxt2">全面屏2222.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="20" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/phone/phone2.jpg" alt="">
+                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="21" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/phone/phone3.jpg" alt="">
+                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="22" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/phone/phone4.jpg" alt="">
+                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="23" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <a href="">
+                        <div class="EndList">
+                            <a href="">
+                                <li style="height: 143px;">
+                                    <h5>小米净水器</h5>
+                                    <p>1999元</p>
+                                    <div>
+                                        <img src="img/jiadian/jiadian8.jpg" alt="" style="width: 90px;">
+                                    </div>
+                                </li>
+                            </a>
+                            <a href="">
+                                <li style="height: 143px;">
+                                    <h3>浏览更多</h3>
+                                    <h4>热门</h4>
+                                    <div>
+                                        <i class="fa fa-angle-right icon1" aria-hidden="true"></i>
+                                    </div>
+                                </li>
+                            </a>
+                        </div>
+                    </a>
+                    <li>
+                        <a href=""><img src="img/phone/phone6.jpg" alt="">
+                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="26" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/phone/phone7.jpg" alt="">
+                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="27" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href=""><img src="img/phone/phone8.jpg" alt="">
+                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="28" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <div class="jiadianMain" id="jd3" style="display: none;">
                 电脑
