电视影音部分

--- a/Home.html
+++ b/Home.html
@@ -437,8 +437,8 @@
             <div class="jiadianMain" id="jd2" style="display: none;">
                 <ul>
                     <li>
-                        <a href=""><img src="img/phone/phone1.jpg" alt="">
-                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                        <a href=""><img src="img/jiadian/jiadian1.jpg" alt="">
+                            <p class="Phonetxt1">jiadian1</p>
                             <p class="Phonetxt2">全面屏2222.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -451,8 +451,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/phone/phone2.jpg" alt="">
-                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                        <a href=""><img src="img/jiadian/jiadian2.jpg" alt="">
+                            <p class="Phonetxt1">jiadian2</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -465,8 +465,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/phone/phone3.jpg" alt="">
-                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                        <a href=""><img src="img/jiadian/jiadian03.jpg" alt="">
+                            <p class="Phonetxt1">jiadian3</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -479,8 +479,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/phone/phone4.jpg" alt="">
-                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                        <a href=""><img src="img/jiadian/jiadian4.png" alt="">
+                            <p class="Phonetxt1">jiadian4</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -496,10 +496,10 @@
                         <div class="EndList">
                             <a href="">
                                 <li style="height: 143px;">
-                                    <h5>小米净水器</h5>
-                                    <p>1999元</p>
+                                    <h5>小米盒子</h5>
+                                    <p>299元</p>
                                     <div>
-                                        <img src="img/jiadian/jiadian8.jpg" alt="" style="width: 90px;">
+                                        <img src="img/jiadian/jiadian10.jpg" alt="" style="width: 90px;">
                                     </div>
                                 </li>
                             </a>
@@ -515,8 +515,8 @@
                         </div>
                     </a>
                     <li>
-                        <a href=""><img src="img/phone/phone6.jpg" alt="">
-                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                        <a href=""><img src="img/jiadian/jiadian5.jpg" alt="">
+                            <p class="Phonetxt1">jiadian5</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -529,8 +529,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/phone/phone7.jpg" alt="">
-                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                        <a href=""><img src="img/jiadian/jiadian6.jpg" alt="">
+                            <p class="Phonetxt1">jiadian6</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -544,8 +544,8 @@
                     </li>
 
                     <li>
-                        <a href=""><img src="img/phone/phone8.jpg" alt="">
-                            <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
+                        <a href=""><img src="img/jiadian/jiadian7.jpg" alt="">
+                            <p class="Phonetxt1">jiadian7</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -560,7 +560,129 @@
                 </ul>
             </div>
             <div class="jiadianMain" id="jd3" style="display: none;">
-                电脑
+                <ul>
+                    <li>
+                        <a href=""><img src="img/jiadian/jiadian1.jpg" alt="">
+                            <p class="Phonetxt1">jiadian1</p>
+                            <p class="Phonetxt2">全面屏2222.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="30" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/jiadian/jiadian2.jpg" alt="">
+                            <p class="Phonetxt1">jiadian2</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="31" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/jiadian/jiadian03.jpg" alt="">
+                            <p class="Phonetxt1">jiadian3</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="32" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/jiadian/jiadian4.png" alt="">
+                            <p class="Phonetxt1">jiadian4</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="33" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <a href="">
+                        <div class="EndList">
+                            <a href="">
+                                <li style="height: 143px;">
+                                    <h5>小米盒子</h5>
+                                    <p>299元</p>
+                                    <div>
+                                        <img src="img/jiadian/jiadian10.jpg" alt="" style="width: 90px;">
+                                    </div>
+                                </li>
+                            </a>
+                            <a href="">
+                                <li style="height: 143px;">
+                                    <h3>浏览更多</h3>
+                                    <h4>热门</h4>
+                                    <div>
+                                        <i class="fa fa-angle-right icon1" aria-hidden="true"></i>
+                                    </div>
+                                </li>
+                            </a>
+                        </div>
+                    </a>
+                    <li>
+                        <a href=""><img src="img/jiadian/jiadian5.jpg" alt="">
+                            <p class="Phonetxt1">jiadian5</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="36" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/jiadian/jiadian6.jpg" alt="">
+                            <p class="Phonetxt1">jiadian6</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="37" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href=""><img src="img/jiadian/jiadian7.jpg" alt="">
+                            <p class="Phonetxt1">jiadian7</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="38" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <div class="jiadianMain" id="jd4" style="display: none;">
                 家居
