--- a/Home.html
+++ b/Home.html
@@ -562,8 +562,8 @@
             <div class="jiadianMain" id="jd3" style="display: none;">
                 <ul>
                     <li>
-                        <a href=""><img src="img/jiadian/jiadian1.jpg" alt="">
-                            <p class="Phonetxt1">jiadian1</p>
+                        <a href=""><img src="img/computer/dn1.jpg" alt="">
+                            <p class="Phonetxt1">dn1</p>
                             <p class="Phonetxt2">全面屏2222.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -576,8 +576,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/jiadian/jiadian2.jpg" alt="">
-                            <p class="Phonetxt1">jiadian2</p>
+                        <a href=""><img src="img/computer/dn2.jpg" alt="">
+                            <p class="Phonetxt1">dn2</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -590,8 +590,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/jiadian/jiadian03.jpg" alt="">
-                            <p class="Phonetxt1">jiadian3</p>
+                        <a href=""><img src="img/computer/dn3.jpg" alt="">
+                            <p class="Phonetxt1">dn3</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -604,8 +604,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/jiadian/jiadian4.png" alt="">
-                            <p class="Phonetxt1">jiadian4</p>
+                        <a href=""><img src="img/computer/dn4.jpg" alt="">
+                            <p class="Phonetxt1">dn4</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -621,10 +621,10 @@
                         <div class="EndList">
                             <a href="">
                                 <li style="height: 143px;">
-                                    <h5>小米盒子</h5>
-                                    <p>299元</p>
+                                    <h5>多功能转接器</h5>
+                                    <p>199元</p>
                                     <div>
-                                        <img src="img/jiadian/jiadian10.jpg" alt="" style="width: 90px;">
+                                        <img src="img/computer/dn8.jpg" alt="" style="width: 90px;">
                                     </div>
                                 </li>
                             </a>
@@ -640,8 +640,8 @@
                         </div>
                     </a>
                     <li>
-                        <a href=""><img src="img/jiadian/jiadian5.jpg" alt="">
-                            <p class="Phonetxt1">jiadian5</p>
+                        <a href=""><img src="img/computer/dn5.png" alt="">
+                            <p class="Phonetxt1">dn5</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -654,8 +654,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/jiadian/jiadian6.jpg" alt="">
-                            <p class="Phonetxt1">jiadian6</p>
+                        <a href=""><img src="img/computer/dn6.jpg" alt="">
+                            <p class="Phonetxt1">dn6</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
@@ -669,8 +669,8 @@
                     </li>
 
                     <li>
-                        <a href=""><img src="img/jiadian/jiadian7.jpg" alt="">
-                            <p class="Phonetxt1">jiadian7</p>
+                        <a href=""><img src="img/computer/dn7.png" alt="">
+                            <p class="Phonetxt1">dn7</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
                                 <span style="color: #ff6700;">2999元</span>
